GNOME Bugzilla – Bug 779838
arg: Fix accidental fallthrough
Last modified: 2017-03-11 07:26:13 UTC
Drive-by fix, see patch.
Created attachment 347607 [details] [review] arg: Fix accidental fallthrough
Created attachment 347648 [details] [review] arg: Shut up a compiler warning Recent GCC warns about implicit fallthrough in switch statements. C++-17 defines a standard [[fallthrough]] attribute to mark an intentional fallthrough, but to not make too many assumptions about the compiler, just move the existing comment where GCC recognizes it.
Review of attachment 347648 [details] [review]: Thank you for making me google C++ attributes! I learned something :-) But indeed, I would not like to depend on a more recent C++ standard than is mandated by the version of SpiderMonkey. Patch +1
Review of attachment 347607 [details] [review]: +1 Nice catch, this went unspotted for 7 years.
Attachment 347607 [details] pushed as c7fc8af - arg: Fix accidental fallthrough Attachment 347648 [details] pushed as 8eeaa62 - arg: Shut up a compiler warning