arg: Fix accidental fallthrough

https://bugzilla.gnome.org/show_bug.cgi?id=779838